--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
-    "framer-motion": "^10.16.4"
+    "framer-motion": "^10.16.4",
+    "react-animated-cursor": "^2.8.1"
   }
 }
